# django-softdelete

./: .gitignore  .travis.yml  MANIFEST.in  README  README.md  pyproject.toml  setup.py  tox.ini
softdelete/: admin.py  forms.py  models.py  settings.py  signals.py  urls.py  views.py
softdelete/admin/: __init__.py  admin.py  forms.py
softdelete/migrations/: 0001_initial.py  0002_auto_20170912_0537.py  0002_auto__del_recordset__del_unique_recordset_changeset_content_type_objec.py  0003_auto_20211015_1406.py  0003_auto__chg_field_softdeleterecord_object_id__chg_field_changeset_object.py  0004_rename_changeset_content_type_object_id_softdelete__content_7eb5a8_idx_and_more.py
softdelete/south_migrations/: 0001_initial.py
softdelete/templates/: base.html
softdelete/templates/admin/softdelete/: change_form.html
softdelete/templates/admin/softdelete/changeset/: change_form.html
softdelete/templates/admin/softdelete/softdeleterecord/: change_form.html
softdelete/templates/softdelete/: base.html  changeset_detail.html  changeset_form.html  changeset_list.html
softdelete/templates/softdelete/stubs/: changeset_detail.html
softdelete/test_softdelete_app/: exceptions.py  models.py
softdelete/tests/: __init__.py  constanats.py  models.py  test_sd.py  test_views.py
